:wrench: fixed loading animation size on small screens

--- a/style.css
+++ b/style.css
@@ -308,7 +308,8 @@ input[type="submit"]:disabled, input[type="submit"][disabled] {
 
 .loading-animation {
     position: relative;
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
